# a2a_daemon_engine

./: .gitignore  README.md  _verify_restructure.py  _verify_runtime_imports.py  pyproject.toml
a2a_daemon_engine/: __init__.py  main.py  schema.py
a2a_daemon_engine/handlers/: __init__.py  a2a_ai_agent_utility.py  a2a_app.py  a2a_cancellation.py  a2a_core.py  a2a_core_engine_handler.py  a2a_cost_extension.py  a2a_executor.py  a2a_extended_card.py  a2a_graphql_subscriptions.py  a2a_grpc.py  a2a_handlers.py  a2a_health_monitor.py  a2a_hermes_handler.py  a2a_jsonrpc.py  a2a_jsonrpc_bridge.py  a2a_pushconfig.py  a2a_rate_limiter.py  a2a_sdk_compat.py  a2a_secure_passport.py  a2a_server.py  a2a_sse.py  a2a_taskstore.py  a2a_telemetry.py  a2a_utility.py  auth_router.py  config.py  jwt_cognito.py  jwt_local.py  middleware.py  schema.py  sse_manager.py
a2a_daemon_engine/models/: __init__.py  a2a_agent.py  a2a_message.py  a2a_setting.py  a2a_task.py  cache.py  utils.py
a2a_daemon_engine/models/dynamodb/: a2a_agent.py  a2a_message.py  a2a_setting.py  a2a_task.py  cache.py  utils.py
a2a_daemon_engine/models/postgresql/: __init__.py  a2a_agent.py  a2a_message.py  a2a_setting.py  a2a_task.py  base.py  utils.py
a2a_daemon_engine/models/repositories/: __init__.py  base.py  dispatch.py
a2a_daemon_engine/models/repositories/dynamodb/: __init__.py  a2a_agent_repo.py  a2a_message_repo.py  a2a_setting_repo.py  a2a_task_repo.py
a2a_daemon_engine/models/repositories/postgresql/: __init__.py  a2a_agent_repo.py  a2a_message_repo.py  a2a_setting_repo.py  a2a_task_repo.py
a2a_daemon_engine/mutations/: __init__.py  a2a_agent.py  a2a_message.py  a2a_setting.py  a2a_task.py
a2a_daemon_engine/queries/: __init__.py  a2a_agent.py  a2a_message.py  a2a_setting.py  a2a_task.py
a2a_daemon_engine/tests/: .env.example  README.md  __init__.py  a2a_rpc_verifier.py  a2a_taskstate_validator.py  a2a_tck_checker.py  conftest.py  load_sample_data.py  pg_live_transcript.json  pytest.ini  register_hermes_agent.py  start_daemon.py  test_a2a_jsonrpc_bridge.py  test_a2a_mock_actions.py  test_a2a_protocol_compliance.py  test_a2a_sdk_compat.py  test_ai_a2a_daemon_engine.py  test_api.py  test_core_engine_handler.py  test_executor_unit.py  test_handlers_unit.py  test_helpers.py  test_hermes_handler.py  test_jwt_validation.py  test_phase10.py  test_phase6.py  test_phase8.py  test_phase9.py  test_postgresql_backend.py  validate_agent_card.py
a2a_daemon_engine/types/: __init__.py  a2a_agent.py  a2a_message.py  a2a_setting.py  a2a_task.py
a2a_daemon_engine/utils/: __init__.py  exceptions.py  normalization.py  rls.py
config/: a2a_config.example.json  users.json.example
docs/: A2A_ARCHITECTURE.md  A2A_DEVELOPMENT_PLAN.md  A2A_PROTOCOL_CALL_FLOW.md  A2A_PROTOCOL_COMPLIANCE_PLAN.md  A2A_TEST_PLAN.md  DOCUMENTATION_INDEX.md  HERMES_A2A_BRIDGE_DEVELOPMENT_PLAN.md  HERMES_INTEGRATION.md  INTEGRATION_SCENARIOS_SOP.md  INTEGRATION_TEST_PLAN.md  a2a-protocol-analysis.md
migration/: alembic.ini
migration/alembic/: env.py
migration/alembic/versions/: 0001_create_a2a_agents.py  0002_create_a2a_tasks.py  0003_create_a2a_messages.py  0004_create_a2a_settings.py  0005_enable_rls_policies.py
