[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "a2a-daemon-engine"
version = "0.0.1"
description = "Agent-to-Agent (A2A) Protocol Daemon Engine with gateway dispatch"
readme = "README.md"
authors = ["SilvaEngine Team"]
license = "MIT"
keywords = ["a2a", "agent", "daemon", "distributed-systems", "multi-agent"]
homepage = "https://github.com/ideabosque/a2a_daemon_engine"
repository = "https://github.com/ideabosque/a2a_daemon_engine"
documentation = "https://github.com/ideabosque/a2a_daemon_engine/blob/main/README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "a2a_daemon_engine"}]

[tool.poetry.dependencies]
python = "^3.10"

# Authentication (JWT verification — gateway handles token issuance)
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"

# HTTP Client
httpx = "^0.25.0"

# GraphQL
graphene = "^3.3"
graphql-core = "^3.2.0"

# Configuration
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

# AWS
boto3 = "^1.28.0"

# Utilities
pendulum = "^2.1.2"

# SilvaEngine Libraries
SilvaEngine-DynamoDB-Base = "^0.1.0"
SilvaEngine-Utility = "^0.1.0"

# Database
pynamodb = "^5.5.0"

# A2A SDK (Starlette transitive via http-server extra for SDK protocol server)
a2a-sdk = {extras = ["http-server"], version = "^1.0.0"}

# gRPC (optional)
grpcio = {version = "^1.59.0", optional = true}
grpcio-tools = {version = "^1.59.0", optional = true}

# Telemetry (optional)
opentelemetry-api = {version = "^1.20.0", optional = true}
opentelemetry-sdk = {version = "^1.20.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.292"

[tool.poetry.extras]
grpc = ["grpcio", "grpcio-tools"]
telemetry = ["opentelemetry-api", "opentelemetry-sdk"]
postgresql = ["SQLAlchemy>=1.4", "psycopg2-binary>=2.9", "alembic>=1.10"]
all = ["grpcio", "grpcio-tools", "opentelemetry-api", "opentelemetry-sdk", "SQLAlchemy>=1.4", "psycopg2-binary>=2.9", "alembic>=1.10"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ideabosque/a2a_daemon_engine/issues"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["a2a_daemon_engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (DB, API)",
    "slow: Tests taking significant time",
    "a2a: A2A protocol tests",
    "agent: Agent-related tests",
    "task: Task handling tests",
    "message: Message routing tests",
    "setting: Setting-related tests",
    "server: A2A server tests",
    "graphql: GraphQL schema tests",
    "cache: Cache configuration tests",
    "performance: Performance and load-oriented tests",
]